# budget-pilot

./: .gitignore  CMakeLists.txt  main.cpp
domain/interface/: repository.hpp
domain/model/: account.hpp  category.hpp  transaction.hpp
infrastructure/persistence /: dbcontext.cpp  dbcontext.hpp  statement.cpp  statement.hpp
infrastructure/repositories/: account_repository.cpp  account_repository.hpp  category_repository.cpp  category_repository.hpp  transaction_repository.cpp  transaction_repository.hpp
src/application/transaction/: TransactionService.hpp  transaction_service.hpp
src/domain/model/: category.hpp
src/domain/utilities/: Reponse.hpp
src/infrastructure/persistence/: DbContext.cpp  DbContext.hpp  Statement.cpp  dbcontext.cpp  statement.cpp  statement.hpp
src/infrastructure/repositories/: AccountRepository.cpp  AccountRepository.hpp  CategoryRepository.cpp  CategoryRepository.hpp  TransactionRepository.cpp  account_repository.cpp  account_repository.hpp  category_repository.cpp  category_repository.hpp  transaction_repository.cpp  transaction_repository.hpp
src/presentation/: Main.qml  main.cpp
src/presentation/components/: AddTransactionDialog.qml  BudgetCard.qml  CustomButton.qml  DatePicker.qml  Header.qml  Sidebar.qml  SidebarItem.qml
src/presentation/pages/: DashboardPage.qml
src/presentation/themes/: AppTheme.qml
src/presentation/viewmodels/: DashboardViewModel.cpp  DashboardViewModel.hpp  FinancialSummaryVm.cpp  FinancialSummaryVm.hpp
